# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
import("//foundation/arkui/ace_engine/ace_config.gni")
module_output_path = "arkui/formrender"

ohos_fuzztest("ArkuiFormRenderGroupFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$ace_root/test/fuzztest/arkuiformrendergroup_fuzzer"

  include_dirs = [
    "$ace_root",
    "$ace_root/interfaces/inner_api",
    "$root_out_dir/arkui/framework",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "arkuiformrendergroup_fuzzer.cpp" ]

  deps = [
    "$ace_root/interfaces/inner_api/form_render:ace_form_render",
    "$graphic_2d_path/rosen/modules/render_service_client:librender_service_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "ace_engine:ace_uicontent",
    "c_utils:utils",
    "form_fwk:form_manager",
    "graphic_2d:surface",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  ldflags = []
  if (ace_engine_feature_enable_coverage) {
    cflags += [ "--coverage" ]
    ldflags += [ "--coverage" ]
  }
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ArkuiFormRenderGroupFuzzTest",
  ]
}
###############################################################################
