# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
import("//foundation/arkui/ace_engine/ace_config.gni")
module_output_path = "ace_engine/ace_engine/formrender"

ohos_fuzztest("ArkuiFormRenderGroupFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$ace_root/test/fuzztest/arkuiformrendergroup_fuzzer"

  sources = [ "arkuiformrendergroup_fuzzer.cpp" ]
  sources += [ "$ace_root/frameworks/core/common/container_scope.cpp" ]
  deps = [
    "$ace_root/frameworks/base:ace_memory_monitor_ohos",
    "$ace_root/interfaces/inner_api/form_render:ace_form_render",
    "$ace_root/test/unittest:ace_unittest_log",
    "$ace_root/test/unittest:ace_unittest_trace",
    "$cjson_root:cjson_static",
  ]

  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "form_fwk:form_manager",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  configs = [ "$ace_root/test/fuzztest:ace_fuzz_config" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ArkuiFormRenderGroupFuzzTest",
  ]
}
###############################################################################
