# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

#####################hydra-fuzz###################
import("//foundation/arkui/ace_engine/ace_config.gni")
module_output_path = "arkui/imageloader"

##############################fuzztest##########################################
ohos_fuzztest("ImageLoaderFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//foundation/arkui/ace_engine/test/fuzztest/imageloader_fuzzer"
  include_dirs = []
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "$ace_root/frameworks/core/common/ace_application_info.cpp",
    "$ace_root/frameworks/core/common/ace_engine.cpp",
    "$ace_root/frameworks/core/common/container.cpp",
    "$ace_root/frameworks/core/common/container_scope.cpp",
    "$ace_root/frameworks/core/common/vibrator/vibrator_proxy.cpp",
    "$ace_root/frameworks/core/common/watch_dog.cpp",
    "$ace_root/frameworks/core/common/window.cpp",
    "$ace_root/frameworks/core/image/animated_image_player.cpp",
    "$ace_root/frameworks/core/image/flutter_image_cache.cpp",
    "$ace_root/frameworks/core/image/image_cache.cpp",
    "$ace_root/frameworks/core/image/image_loader.cpp",
    "$ace_root/frameworks/core/image/image_object.cpp",
    "$ace_root/frameworks/core/image/image_provider.cpp",
    "$ace_root/frameworks/core/image/image_source_info.cpp",
    "$ace_root/frameworks/core/mock/mock_ace_application_info.cpp",
    "imageloader_fuzzer.cpp",
  ]

  deps = [
    "$ace_flutter_engine_root:third_party_flutter_engine_ohos",
    "$ace_flutter_engine_root/skia:ace_skia_ohos",
    "$ace_root/adapter/ohos/osal:ace_osal_ohos",
    "$ace_root/frameworks/base:ace_base_ohos",
    "$ace_root/frameworks/base/resource:ace_resource",
    "$ace_root/frameworks/core/components/theme:build_theme_code",
    "//third_party/opencl-headers:libcl",
  ]

  external_deps = [ "c_utils:utils" ]

  configs = [ "$ace_root:ace_test_config" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  if (!is_asan) {
    deps += [ ":ImageLoaderFuzzTest" ]
  }
}
###############################################################################
